--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>com_samseen_redis-bookstore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>com.samseen</name>
-    <description>com.samseen</description>
+    <description>Book repository using Spring boot</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>3.3.0</version>
+            <version>4.4.1</version>
         </dependency>
 
         <dependency>
